# augusta-pitch-creator

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
frontend/: PASTE_IN_CONSOLE.js  data_text.txt  index.html  landing.html  package-lock.json  package.json  playwright.config.js  server.js  tailwind.config.js
frontend/config/: slides.js
frontend/slides/: angles.txt  case_studies1.txt  case_studies2.txt  case_studies4.txt  pnl.txt
frontend/src/: App.jsx  index.css
frontend/src/components/: BranchingFlow.jsx  ChatInterface.jsx  SlideCard.jsx
frontend/tests/: create-all-presentations-parallel.js  create-combined-presentation.js  create-combined-with-variants.js  pitch-automation.test.js  run-pitch-automation.js  run-pitch-existing-browser.js  run-pitch-new-presentation.js  working-cookies.json
frontend/utils/: pitch-automation.js  pitch-paste-console.js
